--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -516,7 +516,7 @@ ul.meta-nav-top
                   position: absolute;
                   right: 0px;
                   bottom: 0px;
-                  background: blue;
+                  background: #EE6E09;
                   text-align: center;
                   border-radius: 30px 30px 30px 30px;
                   color: #fff;
@@ -2124,7 +2124,7 @@ span.page-views {
               position: absolute;
               right: 0px;
               bottom: 0px;
-              background: blue;
+              background: #EE6E09;
               text-align: center;
              border-radius: 15px 15px 15px 15px;
              color: #fff;
@@ -2998,7 +2998,7 @@ span.page-views {
                 position: absolute;
                 right: 0px;
                 bottom: 0px;
-                background: blue;
+                background: #EE6E09;
                 text-align: center;
                 border-radius: 30px 30px 30px 30px;
                 color: #fff;
