--- a/httpdocs/theme/flatui/css/style.css
+++ b/httpdocs/theme/flatui/css/style.css
@@ -1013,7 +1013,7 @@ span.packagetypeos
   position: absolute;
   left: 0px;
   bottom: 0px;
-  background: orange;
+  background: blue;
   text-align: center;
   border-radius: 30px 30px 30px 30px;
   color: #fff;
@@ -1025,7 +1025,7 @@ span.packagetypeos
   position: absolute;
   left: 0px;
   bottom: 0px;
-  background: orange;
+  background: blue;
   text-align: center;
   border-radius: 15px 15px 15px 15px;
   color: #fff;
@@ -1037,7 +1037,7 @@ span.packagetypeos
     position: absolute;
     right: 0px;
     bottom: 0px;
-    background: blue;
+    background:#EE6E09;
     text-align: center;
     border-radius: 30px 30px 30px 30px;
     color: #fff;
@@ -1048,7 +1048,7 @@ span.packagetypeos
     position: absolute;
     right: 0px;
     bottom: 0px;
-    background: blue;
+    background: #EE6E09;
     text-align: center;
     border-radius: 15px 15px 15px 15px;
     color: #fff;
