new "forgot password" process

--- a/application/modules/default/views/scripts/authorization/partials/loginForm.phtml
+++ b/application/modules/default/views/scripts/authorization/partials/loginForm.phtml
@@ -52,7 +52,7 @@
     </form>
 
     <div class="small light lightgrey center margin-top-15">
-        <a href="/login/forgot" class="lightblue"><?= $this->translate('Forgot your password?') ?></a>
+        <a href="/password/request" class="lightblue"><?= $this->translate('Forgot your password?') ?></a>
     </div>
 
 </div>
