--- a/application/modules/default/views/scripts/user/partials/aboutme-plings.phtml
+++ b/application/modules/default/views/scripts/user/partials/aboutme-plings.phtml
@@ -51,8 +51,8 @@
             </div>            
         </div>
 
-        <div class="col-lg-3" >                                       
-                    <img src="/images/system/pling-btn-active.png" style="width: 20px; height:20px; float: left"/>          
+        <div class="col-lg-3" style="padding-top: 10px;">                                       
+                    <img src="/images/system/pling-btn-active.png" style="width: 20px; height:20px; "/>          
                     <?=$this->printDate($file->created_at)?>
         </div>
 
