--- a/application/modules/default/views/scripts/product/partials/projectplings.phtml
+++ b/application/modules/default/views/scripts/product/partials/projectplings.phtml
@@ -56,7 +56,7 @@ $out = $out.'</div>';
 
 
 
-$out = $out.'<div class="plingbar" style="display:block; float:right"><div class="progress" style="height: 12px; width: 200px">
+$out = $out.'<div class="plingbar" style="display:block; float:right"><div class="progress" style="height: 12px; width: 200px;padding:2px;">
                           <div class="progress-bar" style="background-color: #b8c8b8;width: 100%;"> </div> 
                           </div></div>';
 
