--- a/application/modules/default/views/scripts/product/partials/productPlings.phtml
+++ b/application/modules/default/views/scripts/product/partials/productPlings.phtml
@@ -72,7 +72,7 @@
                     </figure>
                     <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><?php echo Default_Model_HtmlPurify::purify($user['username']); ?></h3>                                                   
                 </a>
-                 <span class="small"><i class="fa fa-check myfav" aria-hidden="true"></i> <?= $this->printDate($user['created_at'])?></span>
+                 <span class="small"><img src="/images/system/pling-btn-active.png" style="width: 20px; height: 20px" /> <?= $this->printDate($user['created_at'])?></span>
             </div>
         </div>
 <?php } ?>
