--- a/application/modules/default/views/scripts/home/partials/common_rightsidebar.phtml
+++ b/application/modules/default/views/scripts/home/partials/common_rightsidebar.phtml
@@ -32,7 +32,7 @@
         ?>
             <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter</a>
         <?php   } else if((null != $identity && $this->isSupporter($identity->member_id))) { ?>
-            <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support<br>Opendesktop.org</a>
+            <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Thank you for your support!</a>
         <?php   }?>
         </div>
 
