--- a/application/modules/default/views/scripts/home/partials/plingprojects.phtml
+++ b/application/modules/default/views/scripts/home/partials/plingprojects.phtml
@@ -30,7 +30,7 @@
                     <a href="<?php echo $this->buildProductUrl($p['project_id']); ?>" style="" >
                         <figure style="padding-top: 50px">
                             
-                            <img src="<?php echo $this->Image($p['profile_image_url'], array('width' => '50', 'height' => '50', 'crop' => 2)); ?>" style="width:40px; height: 40px"/>
+                            <img class="tooltipuser" data-tooltip-content="#tooltip_content" data-user="<?=$p['member_id']?>" src="<?php echo $this->Image($p['profile_image_url'], array('width' => '50', 'height' => '50', 'crop' => 2)); ?>" style="width:40px; height: 40px"/>
                         </figure>
                         <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><?php echo Default_Model_HtmlPurify::purify($p['username']); ?></h3>                                                   
                     </a>
