--- a/application/modules/default/views/scripts/product/partials/projectplings.phtml
+++ b/application/modules/default/views/scripts/product/partials/projectplings.phtml
@@ -46,7 +46,7 @@ $heartatt = $heartatt. 'role="button" data-fragment=""  '
                          .' data-issupporter="'.$isSupporter.'"'                         
         .' data-auth="'.$member_id.'"';
 $out ='<div role="button" class="partialbuttonplingproject" '.$heartatt.' style="display:block; float:right">';
- $out = $out. '<span class="plingtext  "  ><span class="plingnum"> '.$cntplings.'</span> Plings  </span>';
+ $out = $out. '<div class="plingtext"  ><span class="plingnum"> '.$cntplings.'</span> Plings  </div>';
  if ($isPlinged){             
       $out = $out.'<img id="plingbtn" data-src="/images/system/pling-btn-active.png" src="/images/system/pling-btn-active.png"/>';       
  }else{                  
@@ -99,7 +99,11 @@ echo $out;
             z-index: 100;                                 
         }
      
-        span.plingtext{        
+        div.plingtext{        
           padding-right: 15px;
+          float: left;
+          padding-top: 6px;
+          
         }
+
 </style>
