--- a/application/modules/default/views/scripts/user/partials/loopPlings.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPlings.phtml
@@ -242,9 +242,13 @@ if ($this->countDownloadsOverall > 0) {
                             $show_plings_sum = $sum_plings;
                             if(!$sum_plings) {
                                 $show_plings_sum = '-';
+                            } else {
+                                if($show_plings_sum>1) {
+                                    $show_plings_sum = '1 + ' . ($show_plings_sum-1);
+                                }
                             }
                         ?>
-                        <span><?= $sum_plings ?></span>
+                        <span><?= $show_plings_sum ?></span>
                     </div>
                     <div class="col-md-1 text-right cell-default">
                         <?php if(!$showErrMsg) {
