--- a/application/modules/default/views/scripts/product/partials/projectplings.phtml
+++ b/application/modules/default/views/scripts/product/partials/projectplings.phtml
@@ -46,7 +46,7 @@ $heartatt = $heartatt. 'role="button" data-fragment=""  '
                          .' data-issupporter="'.$isSupporter.'"'                         
         .' data-auth="'.$member_id.'"';
 $out ='<div role="button" class="partialbuttonplingproject" '.$heartatt.' style="display:block; float:right">';
- $out = $out. '<div class="plingtext"  ><span class="plingnum"> '.$cntplings.'</span> Plings  </div>';
+ $out = $out. '<div class="plingbartext"  ><span class="plingnum"> '.$cntplings.'</span> Plings  </div>';
  if ($isPlinged){             
       $out = $out.'<img id="plingbtn" data-src="/images/system/pling-btn-active.png" src="/images/system/pling-btn-active.png"/>';       
  }else{                  
@@ -93,13 +93,10 @@ echo $out;
 
 ?>
 
-<style type="text/css">
-      div.projectdtailHeart{
-            float: right;           
-            z-index: 100;                                 
-        }
+<style type="text/css"> 
+  
      
-        div.plingtext{        
+        div.plingbartext{        
           padding-right: 15px;
           float: left;
           padding-top: 6px;
