--- a/application/modules/default/views/emails/url_forgot_password.phtml
+++ b/application/modules/default/views/emails/url_forgot_password.phtml
@@ -454,7 +454,7 @@
                                         <p>You recently requested to reset your password for your account. <br />
                                             Use the button below to reset it. This password reset is only valid for the next 3 hours.<br /></p>
                                         <p><a href="<?=$this->url?>">Reset your password</a><br /></p>
-                                        <p style="font-size: 10px;">When the link above not work, you can try to copy ans paste the following url to your browser: <br>
+                                        <p style="font-size: 10px;">When the link above not work, you can try to copy and paste the following url to your browser: <br>
                                             <?=$this->url?>
                                             <br /></p>
                                         <p>If you did not request a password reset, please ignore this email or contact support if you have questions.<br /></p>
