--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -157,7 +157,7 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                             <?php                                 
                                         echo $this->partial('/home/partials/users.phtml', array(
-                                                "title"  => "Latest  Active Supporters",
+                                                "title"  => "Latest Supporters",
                                                 "users" => $this->supporters
                                             )
                                         );                   
