--- a/application/modules/default/views/scripts/product/partials/projectplings.phtml
+++ b/application/modules/default/views/scripts/product/partials/projectplings.phtml
@@ -46,7 +46,17 @@ $heartatt = $heartatt. 'role="button" data-fragment=""  '
                          .' data-issupporter="'.$isSupporter.'"'                         
         .' data-auth="'.$member_id.'"';
 $out ='<div role="button" class="partialbuttonplingproject" '.$heartatt.' style="display:block; float:right">';
- $out = $out. '<div class="plingbartext"  ><span class="plingnum"> '.$cntplings.'</span> Plings  </div>';
+
+if($cntplings==0)
+{
+    $out = $out. '<div class="plingbartext"><span class="plingnum">  Pling me </span> </div>';  
+}
+else
+{
+    $out = $out. '<div class="plingbartext"><span class="plingnum"> '.$cntplings.' Plings</span> </div>';
+}
+
+ 
  if ($isPlinged){             
       $out = $out.'<img id="plingbtn" data-src="/images/system/pling-btn-active.png" src="/images/system/pling-btn-active.png"/>';       
  }else{                  
