--- a/application/modules/default/views/scripts/user/aboutme.phtml
+++ b/application/modules/default/views/scripts/user/aboutme.phtml
@@ -91,7 +91,7 @@ $plingcatid = $config->settings->member->plingcat->id;
 
                                     <?php if($this->member->member_id != $plingcatid):?>
                                     <div class="row">
-                                       Plings <span class="cnt"> <?=$this->stat['cntPlingsHeGave']?> </span>Products
+                                       Plinged <span class="cnt"> <?=$this->stat['cntPlingsHeGave']?> </span>Products
                                     </div>
                                     <div class="row">
                                        Got <span class="cnt"> <?=$this->stat['cntPlingsHeGot']?> </span><img  src="/images/system/pling-btn-active.png" style="width:20px; height:20px" />
