--- a/application/modules/default/views/scripts/user/partials/aboutme-products.phtml
+++ b/application/modules/default/views/scripts/user/partials/aboutme-products.phtml
@@ -24,7 +24,7 @@
                 if($product['countplings'] >0)
                 {
                 ?>
-                <div class="countplings"><span class="num"><?=$product['countplings']?></span> <img src="/images/system/pling-btn-active.png"/> </div>
+                <div class="countplings"><img src="/images/system/pling-btn-active.png"/> <span class="num"><?=$product['countplings']?></span> Plings </div>
                 <?php 
                 }
                 ?>
