--- a/application/modules/default/views/scripts/user/partials/aboutme-products.phtml
+++ b/application/modules/default/views/scripts/user/partials/aboutme-products.phtml
@@ -24,7 +24,7 @@
                 if($product['countplings'] >0)
                 {
                 ?>
-                <div class="countplings"><img src="/images/system/pling-btn-active.png"/> <span class="num"><?=$product['countplings']?></span> Plings </div>
+                <div class="countplings"><img src="/images/system/pling-btn-active.png"/> <span class="num"><?=$product['countplings']?></span>  </div>
                 <?php 
                 }
                 ?>
@@ -55,7 +55,7 @@
   
             position: absolute;
             bottom: 10px;
-            left: 5px;
+            left: 8px;
             font-size: 11px;
 
         }
