hide architectuer tags for now

--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -70,7 +70,7 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
                                  <th><?= $this->translate('Description'); ?></th>
                             
                                  <th><?= $this->translate('Packagetype'); ?></th>
-                                 <th><?= $this->translate('Architecture'); ?></th>
+                                 <!--<th><?= $this->translate('Architecture'); ?></th>-->
                              
                                  <th style="text-align: right"><?= $this->translate('Downloads'); ?></th>
                                  <th><?= $this->translate('Date'); ?></th>
@@ -352,7 +352,7 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
                                             + '<option value=\"4\">Windows executable</option>'
                                             + '</select><span id="file-tag-packagetype'+this.id+'">'
                                             + '</td>'
-                                    
+                                            <?php /*
                                             + '<td>'
                                             + '<select class="form-control input-sm" id="data-select-architecture' + this.id + '" data-architecture-id="" name="architecture">'
                                             + '    <option value=""></option>'
@@ -368,7 +368,7 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
                                                 ?>
                                             + '</select><span id="file-tag-architecture'+this.id+'">'
                                             + '</td>'
-
+                                            */?>
                                             + '<td style="text-align: right"><span id="download_counter_' + this.id + '">' + count_downloads + '</td>'
                                             + '<td>' +mnt.format('YYYY-MM-DD') + '</td>'
                                             + '<td style="text-align: right">' + humanFileSize(this.size,false) + '</td>'
@@ -443,7 +443,7 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
 
                                         $("#data-select-packagetype" + this.id).hide();
                                         
-                                        
+                                        /**
                                         if ((typeof architectureId != 'undefined') && (architectureId != "")) {
                                             $("#data-select-architecture" + this.id + " option[value='" + architectureId + "']").attr('selected', 'selected');
                                             $architectureIdText = $("#data-select-architecture" + this.id + " option[value='" + architectureId + "']").text();
@@ -454,7 +454,7 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
                                         }
 
                                         $("#data-select-architecture" + this.id).hide();
-
+                                        */
                                         if ((typeof this.ocs_compatible != 'undefined') && (this.ocs_compatible != "") && this.ocs_compatible == 1) {
                                             $("#data-checkbox-compatible-" + this.id).attr('checked', 'checked');
                                         }
@@ -624,7 +624,7 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
                                             + '<option value=\"4\">Windows executable</option>'
                                             + '</select><span id="file-tag-packagetype'+this.id+'">'
                                             + '</td>'
-                                    
+                                            <?php /**
                                             + '<td>'
                                             + '<select class="form-control input-sm" id="data-select-architecture' + this.id + '" data-architecture-id="" name="architecture">'
                                             + '    <option value=""></option>'
@@ -640,7 +640,7 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
                                                 ?>
                                             + '</select><span id="file-tag-architecture'+this.id+'">'
                                             + '</td>'
-                                            
+                                            */
                                             + '<td style="text-align: right"><span id="download_counter_' + this.id + '">' + cout_downloads + '</td>'
                                             + '<td>' +mnt.format('YYYY-MM-DD')  + '</td>'
                                             + '<td style="text-align: right">' + humanFileSize(this.size,false) + '</td>'
@@ -683,6 +683,7 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
 
                                          $("#data-select-packagetype" + this.id).hide();
 
+                                         /**
                                          if ((typeof architectureId != 'undefined') && (architectureId != "")) {
                                              $("#data-select-architecture" + this.id + " option[value='" + architectureId + "']").attr('selected', 'selected');
                                              $architectureIdText = $("#data-select-architecture" + this.id + " option[value='" + architectureId + "']").text();
@@ -693,7 +694,7 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
                                          }
 
                                          $("#data-select-architecture" + this.id).hide();
-
+                                         */
 
                                          if (isExternLink) {
                                             //$("#data-link" + this.id).attr('href', decodeURIComponent(link));
